--- a/views/list.ejs
+++ b/views/list.ejs
@@ -6,8 +6,7 @@
   </head>
   <body>
 
-    <h1>It's a weekday!</h1>
-    <h2>Why aren't you working?</h2>
+    <h1>It's a <%=kindOfDay%>!</h1>
 
   </body>
 </html>
