--- a/ejs-challenge/views/compose.ejs
+++ b/ejs-challenge/views/compose.ejs
@@ -3,8 +3,12 @@
 <h1>Compose</h1>
 
 <form class="" action= "/compose" method="post">
-  <input type="text" name="newPost">
-  <button type="submit" name="button">Publish</button>  
+  <label for="title">Title</label>
+  <input type="text" class="form-control" name="postTitle">
+  <label for="body">Post</label>
+  <textarea name="postBody" class="form-control" rows="8" cols="80"></textarea>
+  <br>
+  <button class="btn btn-primary" type="submit" name="button">Publish</button>
 </form>
 
 <%- include("partials/footer") -%>
