--- a/ejs-challenge/views/home.ejs
+++ b/ejs-challenge/views/home.ejs
@@ -4,4 +4,13 @@
 
 <p> <%= homeContent %> </p>
 
+<% console.log(posts); %>
+
+<% posts.forEach(function(post) { %>
+
+ <h3> <%= post.title %> </h3>
+ <p> <%= post.body.substring(0, 100) + " ... " %><a href="/posts/<%= post.title %>" >Read More</a></p>
+
+<% }); %>
+
 <%- include("partials/footer") -%>
