--- a/Secrets - Starting Code/views/login.ejs
+++ b/Secrets - Starting Code/views/login.ejs
@@ -25,18 +25,24 @@
       </div>
     </div>
 
-    <!-- <div class="col-sm-4">
+    <div class="col-sm-4">
       <div class="card">
         <div class="card-body">
           <a class="btn btn-block" href="/auth/google" role="button">
-            <i class="fab fa-google"></i>
+            <img class="icon" src="https://www.freepnglogos.com/uploads/google-logo-png/google-logo-png-suite-everything-you-need-know-about-google-newest-0.png">
             Sign In with Google
           </a>
         </div>
       </div>
-    </div> -->
+      <div class="card">
+        <div class="card-body">
+          <a class="btn btn-block" href="/auth/facebook" role="button">
+            <img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Facebook_Logo_%282019%29.png/1024px-Facebook_Logo_%282019%29.png">
+            Sign In with Facebook
+          </a>
+        </div>
+      </div>
+    </div>
 
-  </div>
-</div>
 
 <%- include('partials/footer') %>
